# supertoolweb

./: .gitignore  CLAUDE.md  README.md  generate_prd.js  package-lock.json  package.json  start.py
apps/api/: pyproject.toml  railway.json  test_deps.py
apps/api/alembic/versions/: 20260331_0003_auth_sessions.py  20260413_0005_tool_reviews_and_access.py
apps/api/app/: main.py
apps/api/app/api/: router.py
apps/api/app/api/routes/: ai_search.py  auth.py  catalog.py  chat.py  parser.py  recommend.py
apps/api/app/core/: config.py
apps/api/app/models/: __init__.py  models.py
apps/api/app/schemas/: ai_search.py  auth.py  catalog.py  tool.py
apps/api/app/scripts/: cleanup_production_catalog.py  organize_aitool_assets.py
apps/api/app/services/: ai_client.py  ai_search_service.py  auth_service.py  candidate_selector.py  catalog_service.py  catalog_views_seed.py  embedding_service.py  logo_assets.py  rag_chat_service.py  recommendation_service.py  seed_data.py  tool_parser_service.py
apps/api/tests/: test_ai_integration.py  test_api.py  test_auth_api.py  test_catalog_cases.py  test_catalog_view_seed.py  test_chat_api.py  test_chat_rag.py  test_reviews_admin_api.py  test_tool_parser.py
doc/: 02-产品范围.md  04-AI对话模块.md  05-接口规范.md  06-数据结构.md  08-技术架构.md  09-验收标准.md  10-前端设计稿.md  11-愿景落地技术方案-MVO.md  12-前端实际已采用的资产文档.md  13-前后端实现思路与任务拆分.md  14-MVP-改动记录与预期.md  README.md  prd.docx  prd.md  tool-review-template.md  星点评-售前运营说明文档.docx
docs/: api-ai-search-v1.md  current-implementation-baseline.json  current-implementation-baseline.md  hotfix-homepage.md  (+1 more)
(+107 files in other folders)
